--- a/src/App.css
+++ b/src/App.css
@@ -232,4 +232,128 @@ footer {
   color: #555;                    /* Màu xám cho văn bản */
 }
 
+/*contact */
+.contact-container {
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 20px auto; /* Giữa trang */
+}
+
+.contact-container h2 {
+  margin-top: 50px;
+  text-align: center;
+  color: #333;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #333;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  background-color: #555;
+}
+/*about */
+.About {
+  max-width: 1000px;
+  margin: auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.About h2 {
+  font-size: 28px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.About p {
+  line-height: 1.6;
+  font-size: 16px;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+/* events.css */
+.event-h2{
+  margin-top: 50px;
+  text-align: center;
+  color: #333;
+}
+.events-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 10px auto;
+  max-width: 1100px;
+}
+
+.event-card {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255, 255, 255, 0.658);
+  margin: 10px;
+  padding: 15px;
+  width: 300px;
+  height: 500px;
+  text-align: center;
+  transition: transform 0.2s;
+  box-sizing: border-box;
+
+}
+
+.event-card:hover {
+  transform: scale(1.05);
+}
+
+.event-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.event-card h2 {
+  font-size: 1.5rem;
+  margin-top: 10px;
+}
+
+.event-card p {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    font-size: 14px;
+    color: #555;
+}
 
